# SynergySpot

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  start.sh
doc/ckh/: Register接口.md
doc/zsm/: RecoverPW接口.md
doc/数据库/: synergy_spot.sql  synergy_spot_init.sql  sys_init.sql
server/: CMakeLists.txt  Server.cpp  Server.h
server/TcpServer/: TcpServer.cpp  TcpServer.h
server/TcpSocket/: TcpSocket.h
server/ThreadPool/: ThreadPool.cpp
server/do-business/: DoBusinessBase.cpp  DoBusinessBase.h  DoForwardMsg.cpp  DoLogin.cpp  DoLogin.h
server/do-business/do-add-friend/: DoAddFriend.cpp  DoAddFriend.h
server/do-business/do-email-code/: DoEmailCode.cpp  DoEmailCode.h
server/do-business/do-enroll-account/: DoEnrollAccount.cpp  DoEnrollAccount.h
server/do-business/do-forwardmsg/: DoForwardMsg.cpp  DoForwardMsg.h
server/do-business/do-get-friendlist/: DoGetFriendList.cpp  DoGetFriendList.h
server/do-business/do-login/: DoLogin.cpp  DoLogin.h
server/do-business/do-search-friend/: DoSearchFriend.cpp  DoSearchFriend.h
server/do-business/table-api/user-base-info/: UserBaseInfoApi.cpp  UserBaseInfoApi.h
server/tcp-server/: EpollEngine.cpp  EpollEngine.h  TcpServer.cpp  TcpServer.h
server/tcp-socket/: TcpSocket.cpp  TcpSocket.h
server/thread-pool/: TaskQueue.cpp  TaskQueue.h  ThreadPool.cpp  ThreadPool.h
src/: CMakeLists.txt  OChat.rc  QSql_runtime_requires_dir.bat  README.md  main.cpp
src/conf/: clientInfo-example.yaml  clientInfo.yaml  serverInfo-example.yaml  serverInfo.yaml
src/core/base/base-info-query/: BaseInfoQuery.cpp  BaseInfoQuery.h
src/core/base/business-listen/: BusinessListen.cpp  BusinessListen.h
src/core/base/contact-list/: ContactList.cpp  ContactList.h
src/core/base/file-sys/: FileSystem.cpp  FileSystem.h
src/core/base/friend-add/: FriendAdd.cpp  FriendAdd.h
src/core/base/message-list/: MessageList.cpp  MessageList.h
src/core/base/msgcontent-show/: MsgContentShow.cpp  MsgContentShow.h
src/core/land/land-check/: LoginVerify.cpp  LoginVerify.h
src/core/land/register/: AccountRegister.cpp  AccountRegister.h
src/core/safety/email-check/: EmailVerify.cpp  EmailVerify.h
src/core/safety/encrypt-passwd/: EncryptPasswd.cpp  EncryptPasswd.h
src/lib-common/include/mysql/: mysql_version.h  mysqld_error.h
src/lib-common/include/yaml-cpp/contrib/: anchordict.h
src/lib-common/lib/: libprotobuf-lite.lib  libprotobuf.lib
src/lib-common/lib/Linux/: libcrypto.so.1.1  libcurl.so.4.8.0  libsqlite3.so.0.8.6
src/lib-common/lib/Win/: fluentuiplugin.lib  fluentuiplugind.lib  libmysql.lib  libprotobuf-lited.lib  libprotobufd.lib  libprotocd.lib  sqlite3.lib
src/page-qml/: App.qml  App.qrc  qmldir
src/page-qml/arch-page/: ArchPage.qml
src/page-qml/arch-page/tab-item-page/: TabItemPage.qml
src/page-qml/component/: RandomAvatar.qml
src/page-qml/contact-page/: ContactPage.qml
src/page-qml/land-page/: LandPage.qml
src/page-qml/land-page/recover-pw-page/: RecoverPWPage.qml  RecoverSuccessPage.qml
src/page-qml/land-page/register-page/: RegisterPage.qml
src/page-qml/message-container-page/: MessageContainerPage.qml
src/page-qml/message-container-page/chat-page/: ChatPage.qml
src/page-qml/message-container-page/message-item-page/: MessageItemPage.qml
src/page/base-arch/add-button-page/: AddButtonPage.cpp  AddButtonPage.h  AddButtonPage.ui
src/page/base-arch/add-button-page/create-group-page/: CreateGroupPage.cpp  CreateGroupPage.h  CreateGroupPage.ui
src/page/base-arch/add-button-page/search-friend-page/: SearchFriendPage.cpp  SearchFriendPage.h  SearchFriendPage.ui
src/page/base-arch/add-button-page/search-friend-page/search-form/: SearchForm.cpp  SearchForm.h  SearchForm.ui
src/page/base-arch/arch-page/: ArchPage.cpp  ArchPage.h  ArchPage.ui
src/page/base-arch/avatar-page/: AvatarPage.cpp  AvatarPage.h  AvatarPage.ui
src/page/base-arch/contact-page/: ContactPage.cpp  ContactPage.h  ContactPage.ui
src/page/base-arch/contact-page/friend-notice-page/: FriendNoticePage.cpp  FriendNoticePage.h  FriendNoticePage.ui
src/page/base-arch/contact-page/friend-notice-page/notice-form/: NoticeForm.cpp  NoticeForm.h  NoticeForm.ui
src/page/base-arch/file-page/: FilePage.cpp  FilePage.h  FilePage.ui
src/page/base-arch/more-option-page/: MoreOptionPage.cpp  MoreOptionPage.h  MoreOptionPage.ui
src/page/base-arch/msg-page/: MsgPage.cpp  MsgPage.h  MsgPage.ui
src/page/land-page/: LandPage.cpp  LandPage.h  LandPage.ui
src/page/land-page/register-page/: RegisterPage.cpp  RegisterPage.h  RegisterPage.ui
src/protofile/: DTO.pb.cc  DTO.pb.h  DTO.proto  msgPacket.pb.cc  msgPacket.pb.h  msgPacket.proto
src/protofile/disconnect/: DisconnectDTO.pb.cc  DisconnectDTO.pb.h  DisconnectDTO.proto
src/protofile/email/: EmailVerifyCode.pb.cc  EmailVerifyCode.pb.h  EmailVerifyCode.proto
src/protofile/enroll/: EnrollDTO.pb.cc  EnrollDTO.pb.h  EnrollDTO.proto
src/protofile/forward_msg/: ForwardMsgDTO.pb.cc  ForwardMsgDTO.pb.h  ForwardMsgDTO.proto
src/protofile/friend/: FriendDTO.pb.cc  FriendDTO.pb.h  FriendDTO.proto
src/protofile/login/: LoginDTO.pb.cc  LoginDTO.pb.h  LoginDTO.proto
src/utils/: help.h
src/utils/db-lite/: LiteConn.cpp  LiteConn.h
src/utils/db-pool/: ConnectionPool.cpp  ConnectionPool.h  MysqlConn.cpp  MysqlConn.h
src/utils/encrypt/: EncryptString.cpp  EncryptString.h
src/utils/get-time/: GetCurTime.cpp  GetCurTime.h
src/utils/net-work/: ClientConServer.cpp  ClientConServer.h
